fixed min height on result__container to prevent person__container overlapping input on bmi calculator

--- a/src/components/BMICalculator.css
+++ b/src/components/BMICalculator.css
@@ -107,6 +107,7 @@ input[type="number"] {
   background-color: #486ffb;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   width: 100%;
+  min-height: 100px;
   text-align: center;
 }
 
